# catkin_ws

./: .gitignore  commands  create_eclipse_project.sh  run_eclipse.sh
arm_control_tests/: PID.txt  pose_1.txt  pose_2.txt  pose_3.txt  pose_4.txt  pose_4_new.txt  pose_5.txt  pose_5_new.txt  pose_6.txt  pose_7.txt  pose_8 (home).txt
arm_control_tests/calibration/: result_1.txt
arm_control_tests/calibration_problem/: fixing command.txt
arm_control_tests/joint_status/: elbow_pitch.txt  elbow_yaw.txt  pose.txt  shoulder_pitch.txt  shoulder_roll.txt  shoulder_yaw.txt  wrist_pitch.txt  wrist_roll.txt
arm_control_tests/real_action_test/: blah.txt  calibration_point_errors.txt  calibration_point_errors_2.txt  calibration_point_errors_3.txt  calibration_point_errors_4.txt  calibration_point_errors_5.txt  calibration_point_errors_6.txt  test1.ods  test2.ods  test3.ods
doc/: tutorial OctoMap for CMake.txt
modeling/: Camera holder with suppor final rotated.stl  Camera holder with suppor final.ipt  Camera holder with suppor final.stl
modeling/OldVersions/: Camera holder with support.ipt  Camera holder without support.ipt  Camera holder without support.stl  Part2.0004.ipt  Part2.ipt  Part2.stl  Part2_2.stl  Part2_3.stl  Part2_3_rotated.stl  Part2_4.stl  camera_holder_with_support_rotated.stl  camera_holder_without_support_rotated.stl
src/: test.ods  test_2.ods
src/cristi/: Detection_measurements.ods  measurements.txt  measurements2.txt  measurements_excel.ods  measurements_excel_2.ods  mesaurements3.txt
src/cristi/arm/: README.md  (+1 more)
src/cristi/arm/arm_control/cyton_controllers/: CMakeLists.txt  cyton_controller.yaml  cyton_joint_trajectory_action_controller.yaml  gripper_controller.yaml  package.xml
src/cristi/arm/arm_control/cyton_controllers/launch/: controller_manager.launch  start_controller.launch  start_gripper_controller.launch
src/cristi/arm/arm_control/cyton_controllers/src/: gripper_moveit_interface.cpp
src/cristi/arm/arm_control/cyton_gamma_1500_moveit_conf/: CMakeLists.txt  package.xml
src/cristi/arm/arm_control/cyton_gamma_1500_moveit_conf/config/: cyton_gamma_1500.srdf  joint_limits.yaml  ompl_planning.yaml
src/cristi/arm/arm_control/cyton_gamma_1500_moveit_conf/launch/: cyton_gamma_1500_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  run_benchmark_ompl.launch  trajectory_execution.launch.xml  warehouse.launch
src/cristi/arm/arm_control/cyton_gamma_1500_moveit_conf/src/: get_arm_pose.cpp  move_arm.cpp  move_arm_to_bottle.cpp  move_gripper.cpp  path_execution.cpp  path_execution_moveit.cpp  test_coordinates.cpp  utils.h
src/cristi/arm/arm_control/pick_place_demo/: CMakeLists.txt  package.xml
src/cristi/arm/arm_control/pick_place_demo/cfg/: Position.cfg
src/cristi/arm/arm_control/pick_place_demo/src/: joint_position_List.txt  move_group_interface_tutorial.cpp  pose_reconfigure.cpp  pose_vision.cpp
src/cristi/arm_simulation/: CMakeLists.txt  bottle.urdf  cyton_gamma_1500_camera.urdf  kinect.urdf  package.xml  pixel_camera.urdf  table.sdf
src/cristi/arm_simulation/launch/: spawn_arm.launch
src/cristi/arm_simulation/src/: pointcloud_corrector.cpp
src/cristi/cam_gripper_tf/: .cproject  .project  CMakeLists.txt  package.xml
src/cristi/cam_gripper_tf/src/: get_transforms.cpp
src/cristi/detection/: CMakeLists.txt  detection.rviz  package.xml
src/cristi/detection/cfg/: Parameters.cfg
src/cristi/detection/cfg/cpp/detection/: ParametersConfig.h
src/cristi/detection/data/: scene_1.pcd
src/cristi/detection/docs/: ParametersConfig-usage.dox
src/cristi/detection/include/: bottle_detector.hpp  color_detector.hpp  common.h  cylinder_detector.hpp  point_cloud_algorithms.h  point_cloud_processing_pipeline.hpp
src/cristi/detection/launch/: from_file.launch  real.launch
src/cristi/detection/src/: bottle_detector.cpp  color_detector.cpp  cylinder_detector.cpp  point_cloud_algorithms.cpp  point_cloud_processing_pipeline.cpp
src/cristi/detection/src/detection/cfg/: ParametersConfig.py
src/cristi/gripper_control/: CMakeLists.txt  package.xml
src/cristi/gripper_control/include/: gripper_command_listener.h
src/cristi/gripper_control/src/: gripper_command_listener.cpp  gripper_control_real.cpp  gripper_control_sim.cpp
src/cristi/gripper_control/srv/: GripperCommand.srv
src/cristi/kinect_sensor/: CMakeLists.txt  package.xml
src/cristi/kinect_sensor/launch/: real.launch  simulated.launch
src/cristi/kinect_sensor/src/: cloud_callback.h  cloud_viewer_ros.cpp  simulated_cloud_viewer.cpp
src/cristi/next_best_view/octomap_getting_started/: CMakeLists.txt  package.xml
src/cristi/transforms_saver/: CMakeLists.txt  package.xml
src/cristi/transforms_saver/src/: saver.cpp
src/cristi/utils/rviz_markers/: CMakeLists.txt  package.xml
src/cristi/utils/rviz_markers/src/: rviz_markers.cpp
src/cyton_controllers/: CMakeLists.txt  cyton_controller.yaml  cyton_controller.yaml~  cyton_gripper_controller.yaml~  package.xml
src/cyton_gamma_1500_description/: cyton_gamma_1500.rviz  cyton_gamma_1500.urdf  cyton_gamma_1500.urdf~  mainpage.dox  manifest.xml
src/cyton_gamma_1500_moveit_conf/: .setup_assistant  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/cyton_gamma_1500_moveit_conf/config/: controllers.yaml~  joint_names.yaml~  ompl_planning.yaml~
src/cyton_gamma_1500_moveit_conf/launch/: cyton_gamma_1500_moveit_controller_manager.launch.xml~  demo.launch  demo.launch~  fake_moveit_controller_manager.launch.xml  move_group.launch~  moveit.rviz  moveit_planning_execution.launch~  moveit_rviz.launch  moveit_rviz.launch~  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
src/cyton_gamma_1500_moveit_conf/src/: move_arm.cpp  move_gripper.cpp~  test_coordinates.cpp~
src/pick_place_demo/: CMakeLists.txt  package.xml
src/quaternion_helper/: CMakeLists.txt  package.xml
src/transforms/: transforms.txt  transforms_2.txt
(+168 files in other folders)
