<?xml version="1.0"?>
<package>
  <name>pick_place_demo</name>
  <version>0.0.1</version>
  <description>Moveit position pkg combined with reference position of chessboard</description>
  <license>BSD</license>

  <author email="pall.elod@gmail.com">Elod Pall</author>

  <maintainer email="pall.elod@gmail.com">Elod Pall</maintainer>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>

</package>
